# linux-keyboard-clean

./: .gitignore  CMakeLists.txt  README.md
cmake/: CHANGE_GROUP_ID.cmake
include/: Device.hpp  keyboard_lock.hpp
scripts/: set_group_id
src/: Device.cpp  keyboard_lock.cpp  main.cpp
